<resources>
    <string name="app_name">ProyectoPDM2024GT3Grupo1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categorias">Categorias</string>
    <string name="title_carrito">Carrito</string>
    <string name="title_perfil">Perfil</string>
    <string name="textBuscar">Buscar</string>
    <string name="textProducto">Camisa estilo Casual</string>
    <string name="textPrecio">$43.95</string>

    <!--    Para el login-->
    <string name="login_txtEncabezado">Iniciar sesión</string>
    <string name="login_txtcorreo">Usuario</string>
    <string name="login_txtcontrasena">Contraseña</string>
    <string name="login_txtUsername">Username</string>
    <string name="title_login">Login</string>
    <string name="login_registrese">O registrese</string>
    <!--    Para las categorias-->
    <string name="Camisas_hombre">Camisas hombre</string>
    <string name="Vestidos_mujer">Vestidos de mujer</string>
    <string name="Camisas_niño">Camisas de niños</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--PARA EL CARRITO-->
    <string name="title_carrcompras">Carrito(1)</string>
    <string name="title_direccion">Dirección de entrega</string>
    <string name="nombre">Nombre: José Alfonso Galdámez</string>
    <string name="telefono">Telefono: 6000-0000</string>
    <string name="dirección">Direccion: Barrio El Centro</string>
    <string name="departamento">Departamento: Santa Ana</string>
    <string name="municipio">Municipio: Santa Ana</string>
    <string name="total">Total</string>
    <string name="proceder_1">Proceder(1)</string>
    <!--    Para el registrarse-->
    <string name="LogNombres">Nombres</string>
    <string name="LogApellidos">Apellidos</string>
    <string name="LogContraseña">Contraseña</string>
    <string name="LogRepitaContraseña">Repita Contraseña</string>
    <string name="LogTelefono">Teléfono</string>
    <string name="LogDepartamento">Departamento</string>
    <string name="LogMunicipio">Municipio</string>
    <string name="LogDireccion">Dirección</string>
    <string name="login_txtRegistrarse">Registrarse</string>
    <string name="categoria">Categoría:</string>
    <string name="precio">Precio:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="ingrese_el_id_de_producto">Ingrese el Id de producto</string>
    <string name="ingrese_el_nombre_del_producto">Ingrese el nombre del producto</string>
    <string name="precio_de_compra">Precio de compra</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="signoNumero">#</string>
    <string name="signoDolar">$</string>
    <string name="negro">Negro</string>
    <string name="descripcion_del_producto">Descripcion del producto</string>

    <string-array name="Tallas">
        <item>S</item>
        <item>M</item>
        <item>L</item>
    </string-array>
    <string name="title_activity_prueba_control">pruebaControlActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_datos_pedido">DatosPedidoActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>



