<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_txtEncabezado"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="190dp"
        android:inputType="text"
        android:text="@string/login_txtUsername"
        android:background="@drawable/borde"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/borde"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="170dp"
        android:text="@string/login_txtcorreo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:text="@string/login_txtcontrasena" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/rosa"
        android:text="@string/login_txtEncabezado"
        android:textColor="@color/black"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="450dp"
        android:textAlignment="center"
        android:text="@string/login_registrese" />

</FrameLayout>