<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sv.edu.ues.proyectopdm2024gt3grupo1.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categorias"
        android:name="sv.edu.ues.proyectopdm2024gt3grupo1.CategoriasFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/navigation_carrito"
        android:name="sv.edu.ues.proyectopdm2024gt3grupo1.CarritoFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="sv.edu.ues.proyectopdm2024gt3grupo1.PerfilFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_perfil" />
</navigation>