<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_txtRegistrarse"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

<!--  Nombre-->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="129dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/LogNombres"
        android:textAlignment="textStart"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="138dp"
        android:inputType="text"
        android:background="@drawable/borde"/>

    <!--  Apellidos-->
    <TextView
        android:id="@+id/textView21"
        android:layout_width="129dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/LogApellidos"
        android:textAlignment="textStart"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextText22"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="198dp"
        android:inputType="text"
        android:background="@drawable/borde"/>

    <!--  Correo-->
    <TextView
        android:id="@+id/textView23"
        android:layout_width="129dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_txtcorreo"
        android:textAlignment="textStart"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextText24"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="258dp"
        android:inputType="text"
        android:background="@drawable/borde"/>


</FrameLayout>