<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarProductoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarInsert"
        android:layout_width="411dp"
        android:layout_height="55dp"
        android:background="@color/rosa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtInsertId"
        android:layout_width="356dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/ingrese_el_id_de_producto"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <EditText
        android:id="@+id/txtInsertNombre"
        android:layout_width="355dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/ingrese_el_nombre_del_producto"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <Spinner
        android:id="@+id/txtSpinerCategorias"
        android:layout_width="356dp"
        android:layout_height="48dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInsertNombre"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/txtInsertPrecioCompra"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/signoDolar"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPrecioCompra"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/txtInsertCantidadS"
        android:layout_width="60dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/signoNumero"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpinerCategorias"
        app:layout_constraintVertical_bias="0.576" />

    <EditText
        android:id="@+id/txtInsertCantidadM"
        android:layout_width="71dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/signoNumero"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpinerCategorias"
        app:layout_constraintVertical_bias="0.579" />

    <EditText
        android:id="@+id/txtInsertCantidadL"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/signoNumero"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpinerCategorias"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/lblPrecioCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_de_compra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpinerCategorias"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/lblPrecioVenta"
        android:layout_width="106dp"
        android:layout_height="18dp"
        android:text="@string/precio_de_venta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpinerCategorias"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/txtInsertPrecioVenta"
        android:layout_width="136dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/signoDolar"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toEndOf="@+id/txtInsertPrecioCompra"
        app:layout_constraintTop_toBottomOf="@+id/lblPrecioVenta"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cantidad tallas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPrecioCompra"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/checkBoxS"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:text="S"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.202" />

    <TextView
        android:id="@+id/checkBoxM"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:text="M"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:id="@+id/checkBoxL"
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:text="L"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/txtInsertDescripcion"
        android:layout_width="354dp"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/descripcion_del_producto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxL" />


    <ImageView
        android:id="@+id/image1"
        android:layout_width="122dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toTopOf="@+id/txtInsertId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781"
        app:srcCompat="@drawable/borde" />

</androidx.constraintlayout.widget.ConstraintLayout>