<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="95dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/borde">

            <TextView
                android:id="@+id/txtIdProducto"
                android:layout_width="61dp"
                android:layout_height="18dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="225dp"
                android:layout_marginBottom="72dp"
                android:text="id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.838"
                app:layout_constraintStart_toEndOf="@+id/txtVerImagen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Id:"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtIdProducto"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toEndOf="@+id/txtVerImagen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.126" />

            <ImageView
                android:id="@+id/txtVerImagen"
                android:layout_width="60dp"
                android:layout_height="82dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtNombreProducto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/borde" />

            <TextView
                android:id="@+id/lblCategoria"
                android:layout_width="68dp"
                android:layout_height="20dp"
                android:layout_marginStart="72dp"
                android:text="@string/categoria"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtIdProducto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.114" />

            <TextView
                android:id="@+id/txtCategoriaProducto"
                android:layout_width="59dp"
                android:layout_height="20dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toEndOf="@+id/lblCategoria"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.114" />

            <TextView
                android:id="@+id/txtNombreProducto"
                android:layout_width="318dp"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-black"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.892"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.235"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreProducto"
                app:layout_constraintVertical_bias="0.619" />

            <TextView
                android:id="@+id/txtCantidadProductos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#FF0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.033"
                app:layout_constraintStart_toEndOf="@+id/lblCantidad"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreProducto"
                app:layout_constraintVertical_bias="0.619" />

            <TextView
                android:id="@+id/lblPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.176"
                app:layout_constraintStart_toEndOf="@+id/txtCantidadProductos"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreProducto"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:id="@+id/txtPrecioProductos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="TextView"
                android:textColor="#FF0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toEndOf="@+id/lblPrecio"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreProducto"
                app:layout_constraintVertical_bias="0.6" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</FrameLayout>